--- a/source/files_/css/mycss.css
+++ b/source/files_/css/mycss.css
@@ -39,6 +39,31 @@
 #sidebar #menu-mask {
     background: rgba(255,255,255,0);
 }
+
+/*毛玻璃后部分颜色不清楚*/
+/*版权说明标题*/
+#post .post-copyright .post-copyright-meta {
+  color: #3d89bb;
+}
+/*版权说明文字*/
+a {
+  color: #718197;
+}
+/*正文*/
+#article-container p {
+  font-weight: 500;
+}
+/*加密插件更改*/
+.hbe-input-field-shrink:focus + .hbe-input-label-shrink .hbe-input-label-content-shrink,
+.input--filled .hbe-input-label-shrink .hbe-input-label-content-shrink {
+	color: #77c3da !important;
+	-webkit-transform: translate3d(0, 2.5em, 0) scale3d(0.655, 0.655, 1) !important;
+	transform: translate3d(0, 2.5em, 0) scale3d(0.655, 0.655, 1) !important;
+}
+
+.hbe-input-label-shrink::after {
+	background: #6f9c45;
+}
 /* 页脚footer */
 /* 渐变色滚动动画 */
 /* @-webkit-keyframes Gradient {
