--- a/source/files_/css/mycss.css
+++ b/source/files_/css/mycss.css
@@ -83,7 +83,7 @@ h6 {
 }
 
 .hbe-input-label-shrink::after {
-	background: #30dada;
+	background: #30dada !important;
 }
 /* 页脚footer */
 /* 渐变色滚动动画 */
